--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:client": "vite",
+    "dev:server": "tsx watch src/server/index.ts",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -61,7 +63,11 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "socket.io-client": "^4.7.4",
+    "socket.io": "^4.7.4",
+    "express": "^4.18.2",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
